[metadata]
name = rizpass
version = 0.0.2-alpha
author = Rizwan Mustafa
author_email = rizwanmustafa0000@gmail.com
description = A simple and opensource password manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rizwanmustafa/rizpass
project_urls =
    Bug Tracker = https://github.com/rizwanmustafa/rizpass/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    cryptography
    pymysql
    pyperclip
    pymongo[srv]
    cerberus
    colorama

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
       rizpass = rizpass.rizpass:init_interactive
